=== Alexander-3 ===

2002-05-08  Richard J. Williamson  <rjw@apple.com>

    Added optimizations for text rendering.
    
	* WebCoreSupport.subproj/IFTextRenderer.h:
	* WebCoreSupport.subproj/IFTextRenderer.m:
	(freeWidthMap):
	(freeGlyphMap):
	(glyphForCharacter):
	(widthForGlyph):
	(widthForCharacter):
	(-[IFTextRenderer substituteFontForCharacters:length:]):
	(-[IFTextRenderer convertCharacters:length:glyphs:]):
	(-[IFTextRenderer dealloc]):
	(-[IFTextRenderer drawString:atPoint:withColor:]):
	(-[IFTextRenderer drawUnderlineForString:atPoint:withColor:]):
	(-[IFTextRenderer widthForCharacters:length:]):
	(-[IFTextRenderer extendCharacterToGlyphMapToInclude:]):
	(-[IFTextRenderer extendGlyphToWidthMapToInclude:]):

2002-05-08  Darin Adler  <darin@apple.com>

	* Misc.subproj/IFCache.h: Add more JavaScript object statistics.
	* Misc.subproj/IFCache.mm:
	(+[IFCache javaScriptInterpretersCount]): New.
	(+[IFCache javaScriptNoGCAllowedObjectsCount]): New.
	(+[IFCache javaScriptReferencedObjectsCount]): New.

	* WebKit.pbproj/project.pbxproj: Rearranged two files, dunno why.

2002-05-08  Chris Blumenberg  <cblu@apple.com>

	Cleaned up mach-o plug-in support.
	
	Changed the init method in IFPlugin to initWithPath.

	* Plugins.subproj/IFPlugin.h:
	* Plugins.subproj/IFPlugin.m:
	(-[IFPlugin initWithPath:]):
	(-[IFPlugin load]):
	* Plugins.subproj/IFPluginDatabase.m:
	(findPlugins):

2002-05-08  Darin Adler  <darin@apple.com>

	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSource _setTitle:]):
	Use _IF_stringByTrimmingWhitespace.

2002-05-07  Richard J. Williamson  <rjw@apple.com>

        First pass at font substitution.  Find a substitute font to
        use when the specified font doesn't have glyphs for the characters that
        need to be drawn.
        
        Works correctly but hasn't been optimized yet, VERY slow.
        Will optimize this evening and tomorrow.  Try www.yahoo.co.jp,